--- a/flask-hello-world/values.yaml
+++ b/flask-hello-world/values.yaml
@@ -43,8 +43,8 @@ service:
 
 ingress:
   enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  annotations:
+    kubernetes.io/ingress.class: gce
     # kubernetes.io/tls-acme: "true"
   # hosts:
   #  - host: chart-example.local
