Guicorn runs on PORT env variable, adjust helm chart

--- a/flask-hello-world/templates/deployment.yaml
+++ b/flask-hello-world/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- $svcPort := .Values.service.port -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -33,9 +34,12 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            - name: "PORT"
+              value: "{{ $svcPort }}"
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ $svcPort }}
               protocol: TCP
           livenessProbe:
             httpGet:
