--- a/flask-hello-world/templates/ingress.yaml
+++ b/flask-hello-world/templates/ingress.yaml
@@ -16,6 +16,16 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
+  {{- if .Values.ingress.tls }}
+  tls:
+    {{- range .Values.ingress.tls }}
+    - hosts:
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
   backend:
     serviceName: {{ $fullName }}
     servicePort: {{ $svcPort }}
