Fix line breaks

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,9 @@ jobs:
     - if [ ! -d "$HOME/google-cloud-sdk/bin" ]; then rm -rf $HOME/google-cloud-sdk;
       curl https://sdk.cloud.google.com | bash; fi
     - source /home/travis/google-cloud-sdk/path.bash.inc
-    - gcloud components update kubectl
     - gcloud auth activate-service-account --key-file google-service-account-creds.json
     - gcloud config set project flaskhelm
-    - gcloud container clusters \ get-credentials my-first-cluster-1 \ --zone us-central1-c
-      \ --project flaskhelm
+    - gcloud container clusters get-credentials my-first-cluster-1 --zone us-central1-c --project flaskhelm
     - gcloud auth configure-docker
   - stage: build
     script: docker build -t gcr.io/flaskhelm/flask-hello-world:$1.4.0 .
