--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+language: bash
 env:
   global:
     CLOUDSDK_CORE_DISABLE_PROMPTS=1
@@ -10,13 +11,13 @@ jobs:
   include:
     script:
       - stage: setup
-        script: ls -l
         script: bash scripts/setup.sh
       - stage: build
         script: bash scripts/build.sh
       - stage: deploy
         script: bash scripts/deploy.sh
 before_install:
+- ls -l
 - openssl aes-256-cbc -K $encrypted_86e0ec7377c5_key -iv $encrypted_86e0ec7377c5_iv
   -in google-service-account-creds.json.enc -out google-service-account-creds.json
   -d
