--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ jobs:
   include:
     script:
       - stage: setup
-        script: bash scripts/setup.sh
+        script: bash ./scripts/setup.sh
       - stage: build
-        script: bash scripts/build.sh
+        script: bash ./scripts/build.sh
       - stage: deploy
-        script: bash scripts/deploy.sh
+        script: bash ./scripts/deploy.sh
 before_install:
 - ls -l
 - openssl aes-256-cbc -K $encrypted_86e0ec7377c5_key -iv $encrypted_86e0ec7377c5_iv
