--- a/.gitignore
+++ b/.gitignore
@@ -268,4 +268,7 @@ Temporary Items
 requirements.lock
 charts
 
+# Credentials
+google-service-account-creds.json
+
 # End of https://www.toptal.com/developers/gitignore/api/python,flask,macos,emacs
