--- a/flask-hello-world/values.yaml
+++ b/flask-hello-world/values.yaml
@@ -47,7 +47,7 @@ ingress:
     kubernetes.io/ingress.class: gce
     kubernetes.io/ingress.global-static-ip-name: flask-hello-world-ip
   hosts:
-    - host: flask-hello-world.example
+    - host: flaskhelloworld.crabdance.com
       paths: [/]
   tls: []
   #  enabled: false
