--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,22 @@ env:
   global: CLOUDSDK_CORE_DISABLE_PROMPTS=1
 services:
 - docker
+
 cache:
   directories:
   - "$HOME/google-cloud-sdk/"
-script:
-- bash scripts/setup.sh
-- bash scripts/build.sh
-- bash scripts/deploy.sh
 before_install:
 - openssl aes-256-cbc -K $encrypted_86e0ec7377c5_key -iv $encrypted_86e0ec7377c5_iv
   -in google-service-account-creds.json.enc -out google-service-account-creds.json
   -d
 - ls -l
+script:
+- bash scripts/setup.sh
+- bash scripts/build.sh
+- bash scripts/tests.sh
+
+deploy:
+  provider: script
+  script: bash scripts/deploy.sh
+  on:
+    branch: master
