Fix CD for Helm Repo
* Grant higher permissions to sync script

* Moving deploy on master down to script

* Move deploy target up to yaml for visibility

* Don't build on PR, only master

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,5 @@ script:
 - bash scripts/setup.sh
 - bash scripts/build.sh
 - bash scripts/tests.sh
+- if [ "$TRAVIS_BRANCH" = "master" && "$TRAVIS_PULL_REQUEST" = "false" ]; then bash scripts/deploy.sh; fi
 
-deploy:
-  provider: script
-  script: bash scripts/deploy.sh
-  skip_cleanup: true
-  on:
-    branch: master
