--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,4 @@ script:
 - bash scripts/setup.sh
 - bash scripts/build.sh
 - bash scripts/tests.sh
-- if [ "$TRAVIS_BRANCH" = "master" && "$TRAVIS_PULL_REQUEST" = "false" ]; then bash scripts/deploy.sh; fi
-
+- if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then bash scripts/deploy.sh; fi
