--- a/flask-hello-world/values.yaml
+++ b/flask-hello-world/values.yaml
@@ -46,6 +46,7 @@ ingress:
     kubernetes.io/ingress.class: gce
     kubernetes.io/ingress.global-static-ip-name: flask-hello-world-ip
     networking.gke.io/managed-certificates: flask-hello-world-certificate
+    kubernetes.io/ingress.allow-http: "false"
   enabled: true
   hosts:
   - host: flaskhelloworld.crabdance.com
