Update with reality in cluster (#20)
* Updates to CI/CD for Docker Images (#9) (#10)

* Fix helm list in deploy step

* Stop artifact cleanup before deploy

* Retry deploy step

* Grant higher permissions to sync script

* Moving deploy on master down to script

* Move deploy target up to yaml for visibility

* Don't build on PR, only master

* Fix typo

* Fix bash syntax

* Fix path

* Add chart linting to CI

* Upgrade ManagedCertificate version and disable http

* Remove ingress notation

* Upgrade DNS and NOTES.txt

* Fix CI flow

--- a/flask-hello-world/values.yaml
+++ b/flask-hello-world/values.yaml
@@ -48,16 +48,11 @@ ingress:
     networking.gke.io/managed-certificates: flask-hello-world-certificate
     kubernetes.io/ingress.allow-http: "false"
   enabled: true
-  hosts:
-  - host: flaskhelloworld.crabdance.com
-    paths:
-    - /
-  tls: []
 
 certificates:
   enabled: true
   hosts:
-  - flaskhelloworld.crabdance.com
+  - flaskhelloworld.42web.io
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
