--- a/flask-hello-world/values.yaml
+++ b/flask-hello-world/values.yaml
@@ -50,7 +50,7 @@ ingress:
 certificates:
   enabled: true
   hosts:
-  - flaskhelloworld.42web.io
+  - flaskhelloworld.tk
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
